  requirement (>= 0.5-2) was a mistake.
- Updated version requirement: R (>= 2.15.2).  For some reason, R
  CMD check does not play nice with testthat on earlier versions of R.

File: NAMESPACE
---------------

- Importing captureOutput() from R.utils.
- Importing package Matrix.
- Importing various functions from matrixStats.
- Exporting net().

Various .R files
----------------

- Using deparse.level=0 in some calls to cbind() and rbind() when names
  are not needed in the result.  Due to this change, the first column of
  the $bins matrix in the return value of ccf.series.rwl(),
  corr.rwl.seg(), and corr.series.seg() does not have (undocumented)
  column names anymore.
- Using base::rowSums and functions from the matrixStats package
  to speed up some operations on rows or columns of matrices.
- Reduced the number of calls to options() by one when setting and
  restoring options

File: ffcsaps.R
---------------

- Increased performance by using sparse matrices from the Matrix
  package.

File: latexify.R
----------------

- Improved efficiency when handling a large number of strings with
  the "bytes" Encoding.  The code now uses R.utils::captureOutput()
  instead of a home-baked re-implementation of (parts of)
  utils::capture.output(), which is also a more compact solution in
  terms of lines of code in dplR.  See Henrik Bengtsson's notes at
  http://www.jottr.org/2014/05/captureOutput.html (referenced on
  2015-01-07).

File: net.R
-----------

- New function for computing the NET parameter (Esper et al., 2001).

File: read.tucson.R
-------------------

- New argument 'edge.zeros', TRUE (default) or FALSE.  If TRUE,
  possible leading and trailing zero values in tree-ring series are
  kept.  If FALSE, such values are dropped.  The latter is how the
  function has worked between (pre-)release 1.5.5 and the previoius
  release, and may be considered a bug or a misfeature.  To
  reiterate, the default behavior has changed in some cases.  The